syntax = "proto3";

package api;

option go_package = "./";

service Order {
    rpc MakeOrder (NewOrder) returns (Response) {}
    rpc GetOrder (GetRequest) returns (OrdersListResponse) {}
}

message NewOrder {
    string name = 1; //название книги, которую хочет заказчик.
    string bookId = 2; //номер книги, которую хочет заказчик.
    string login = 3; //логин заказчика
    string password = 4; //пароль заказчика
}

message OrdersList {
    string bookName = 1;
    string bookId = 2;
    string login = 3;
}

message OrdersListResponse {
    repeated OrdersList orderslist = 1;
}

message GetRequest {}

message Response {
    bool created = 1;
    NewOrder newOrder = 2;
}

